crates/plotnik-lib/tests/02-parser/definitions/unnamed_def_not_last.txt
Expr = [
  (identifier)
  (number)
]

(program (Expr) @value)
==== diagnostics ====
error: definition must be named
 --> query.ptk:6:1
  |
6 | (program (Expr) @value)
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: give it a name like `Name = (program (Expr) @value)`
